# sqlx-to-multiple-entities-poc

./: .env.sample  Cargo.toml  README.md  compose.yaml
migrations/: 20250529154647_add-user-table.down.sql  20250529154647_add-user-table.up.sql  20250712020403_adiciona-tabelas-de-projetos-e-vagas.down.sql  20250712020403_adiciona-tabelas-de-projetos-e-vagas.up.sql
poc_core/: Cargo.toml
poc_core/src/: entidades.rs  lib.rs  types.rs
poc_core/src/agregados/: projeto_com_coordenadores.rs
poc_core/src/entidades/: aluno.rs  professor.rs  projeto.rs  usuario.rs  vaga.rs
poc_core/src/enums/: cargo.rs
seeder/: Cargo.toml  README.md
seeder/src/: main.rs  projetos.rs  usuarios.rs  vagas.rs
sqlx_queries/: Cargo.toml
sqlx_queries/src/: lib.rs  projetos.rs  usuarios.rs  vagas.rs
src/: agregados.rs  main.rs
src/agregados/: projeto_com_coordenadores.rs
src/entidades/: aluno.rs  projeto.rs  usuario.rs  vaga.rs
utils/: Cargo.toml
utils/src/: lib.rs
