[package]
name = "sqlx-to-multiple-entities-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-ring-native-roots",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "chrono",
  "uuid"
] }
tokio = { version = "1.44", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"] }
uuid = "1.17.0"
