[package]
name = "sqlx-to-multiple-entities-poc"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "poc_core", "utils" ]

[workspace.dependencies]
chrono = "0.4"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-ring-native-roots",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "chrono",
  "uuid"
] }
tokio = { version = "1.44", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"] }
uuid = "1.17.0"

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
utils.path = "utils"
poc_core.path = "poc_core"