[package]
name = "sqlx-to-multiple-entities-poc"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "poc_core", "sqlx_queries", "utils", "seeder" ]

[workspace.dependencies]
chrono = "0.4"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-ring-native-roots",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "chrono",
  "uuid"
] }
tokio = { version = "1.44", features = ["fs", "io-std", "test-util", "rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
poc_core.path = "poc_core"
utils.path = "utils"
sqlx_queries.path = "sqlx_queries"

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
utils.workspace = true
poc_core.workspace = true
sqlx_queries.workspace = true